# streamlit-from-diagram-skill

./: .gitignore  README.md  env.example
.claude/: .gitkeep
.claude/skills/generating-streamlit-dashboards/: CHANGELOG.md  SKILL.md
.claude/skills/generating-streamlit-dashboards/assets/: README.md
.claude/skills/generating-streamlit-dashboards/evaluations/: README.md  basic-localhost.json  edge-cases.json  snowflake-deploy.json  visual-validation.json
.claude/skills/generating-streamlit-dashboards/references/: chart-patterns.md  component-mapping.md  content-requirements.md  css-patterns.md  interactivity-patterns.md  layout-patterns.md  model-guidance.md  security-rules.md  snowflake-deployment.md  spcs-setup.md  testability.md  troubleshooting.md  version-matrix.md  workflow-details.md
.claude/skills/generating-streamlit-dashboards/scripts/: auto-screenshot.py  init-project.sh  run-evaluations.py  setup-spcs.sql  validate-compat.py
.claude/skills/streamlit-from-diagram-skill/: SKILL.md
.claude/skills/streamlit-from-diagram-skill/examples/: environment.yml  snowflake.yml
.claude/skills/streamlit-from-diagram-skill/references/: component-mapping.md  spcs-setup.md  troubleshooting.md
.claude/skills/streamlit-from-diagram-skill/scripts/: init-project.sh  setup-spcs.sql
assets/: screenshots-catalog.md
examples/: pyproject.toml  streamlit_app.py
examples/spcs/: spec.yaml
references/: deployment-checklist.md  example-dashboard.md  spcs-setup.md
scripts/: fast-health-check.sh  self-assess.py  validate-compat.py  visual-validate.py
(+22 files in other folders)
