# Localhost Development - Package manager: uv
# Usage: uv sync && uv run streamlit run streamlit_app.py
#
# Version References:
# - SiS Release Notes: https://docs.snowflake.com/en/release-notes/streamlit-in-snowflake
# - PyPI Streamlit: https://pypi.org/project/streamlit/
#
# NOTE: No [build-system] section - this is a script-only project, not a package.
# If you need to build a wheel, add:
#   [build-system]
#   requires = ["hatchling"]
#   build-backend = "hatchling.build"
#   [tool.hatch.build.targets.wheel]
#   packages = ["."]

[project]
name = "streamlit-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.51",  # Min 1.51 (GA in SiS Nov 2025)
    "pandas",
    "numpy",
    "altair>=5.0",
]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
